Fix IA warning modal acceptance and left alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -618,7 +618,7 @@ button,
 }
 
 .modal-justified{
-  text-align: justify;
+  text-align:left;
 }
 
 .modal-check{
